syntax = "proto3";

package antibruteforce;

import "google/protobuf/empty.proto";

option go_package = ".;api";

service AntiBruteForceService {
	rpc AllowAuthorization (ReqAllowAuthorization) returns (ResAllowAuthorization) {}

	rpc AddNetworkToWhitelist (ReqNetwork) returns (google.protobuf.Empty) {}
	rpc DeleteNetworkFromWhitelist (ReqNetwork) returns (google.protobuf.Empty) {}
	rpc Whitelist (google.protobuf.Empty) returns (ResListNetworks) {}

	rpc AddNetworkToBlacklist (ReqNetwork) returns (google.protobuf.Empty) {}
	rpc DeleteNetworkFromBlacklist (ReqNetwork) returns (google.protobuf.Empty) {}
	rpc Blacklist (google.protobuf.Empty) returns (ResListNetworks) {}

	rpc CleanBucketIP(ReqCleanBucket) returns (google.protobuf.Empty) {}
	rpc CleanBucketPassword(ReqCleanBucket) returns (google.protobuf.Empty) {}
	rpc CleanBucketLogin(ReqCleanBucket) returns (google.protobuf.Empty) {}
}

message ReqAllowAuthorization {
	string login = 1;
	string password = 2;
	string ip = 3;
}

message ResAllowAuthorization {
	bool allow = 1;
}

message ReqNetwork {
	string network = 1;
}

message ResListNetworks {
	repeated string networks = 1;
}

message ReqCleanBucket {
	string keyBucket = 1;
}
